Added color to the body

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <title>HTML Tutorial</title>
-    <style></style>
+    <style>
+      body {
+        background-color: burlywood;
+      }
+    </style>
   </head>
   <body>
     
