Renaming Loan form validation
Renaming

--- a/Alvin.html
+++ b/Alvin.html
@@ -82,6 +82,6 @@
       <button style="color: blue;" type="submit" name="submit">Submit</button>
       <button style="margin-left: 350px;color: crimson" ;>Cancel</button>
     </form>
-    <script src="reg.js"></script>
+    <script src="Alvin.js"></script>
   </body>
 </html>
